--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -11,6 +11,7 @@ doctrine:
         types:
             data_statut: App\DBAL\Types\DataStatutType
             trophy_type: App\DBAL\Types\TrophyTypeType
+            road_type: App\DBAL\Types\RoadTypeType
             project_objective: App\DBAL\Types\ProjectObjectiveType
 
     orm:
