--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^1.22 <1.27",
         "sensio/framework-extra-bundle": "*",
+        "stof/doctrine-extensions-bundle": "^1.13",
         "symfony/asset": "6.1.*",
         "symfony/console": "6.1.*",
         "symfony/doctrine-messenger": "6.1.*",
