--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "regenerator-runtime": "^0.13.9",
         "tom-select": "^2.2.2",
         "webpack": "^5.101.0",
-        "webpack-cli": "^4.10.0",
+        "webpack-cli": "^5.1.4",
         "webpack-notifier": "^1.15.0"
     },
     "license": "UNLICENSED",
@@ -21,5 +21,8 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "sortablejs": "^1.15.6"
     }
 }
